unpackaged/objects/Case.object
<CustomObject>
    <fields>
        <fullName>AAAA__c</fullName>
        <description>ZZZZZZZZZZZ</description>
        <label>AAAAA</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Billing_Address_Line1__c</fullName>
        <label>Ida Billing Address Line1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Billing_Address_Line2__c</fullName>
        <label>Ida Billing Address Line2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Billing_City__c</fullName>
        <label>Ida Billing City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Billing_Country__c</fullName>
        <label>Ida Billing Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Billing_Email__c</fullName>
        <label>Ida Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Billing_First_Name__c</fullName>
        <label>Ida Billing First Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Billing_Last_Name__c</fullName>
        <label>Ida Billing Last Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Billing_Phone__c</fullName>
        <label>Ida Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Billing_State__c</fullName>
        <label>Ida Billing State</label>
        <picklist>
            <picklistValues>
                <fullName>Error: Invalid Data.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review all error messages below to correct your data.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Billing_ZipCode__c</fullName>
        <label>Ida Billing ZipCode</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Business_Name__c</fullName>
        <label>Ida Business Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Delivery_Location_Type__c</fullName>
        <label>Ida Delivery Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_GoogleCheckout_OrderId__c</fullName>
        <label>Ida GoogleCheckout OrderId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Message__c</fullName>
        <label>Ida Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Occasion__c</fullName>
        <label>Ida Occasion</label>
        <picklist>
            <picklistValues>
                <fullName>Birthday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Payment_Method__c</fullName>
        <label>Ida Payment Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Payment_Status__c</fullName>
        <label>Ida Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Product_Arrival_Date__c</fullName>
        <label>Ida Product Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Shipping_Address_Line1__c</fullName>
        <label>Ida Shipping Address Line1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Shipping_Address_Line2__c</fullName>
        <label>Ida Shipping Address Line2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Shipping_City__c</fullName>
        <label>Ida Shipping City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Shipping_Country__c</fullName>
        <label>Ida Shipping Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Shipping_First_Name__c</fullName>
        <label>Ida Shipping First Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Shipping_Last_Name__c</fullName>
        <label>Ida Shipping Last Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Shipping_Phone__c</fullName>
        <label>Ida Shipping Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Shipping_State__c</fullName>
        <label>Ida Shipping State</label>
        <picklist>
            <controllingField>eCatalog__Ida_Shipping_Country__c</controllingField>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Shipping_ZipCode__c</fullName>
        <label>Ida Shipping ZipCode</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCatalog__Ida_Total_Amount__c</fullName>
        <label>Ida Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>InternationalEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Escalations</label>
        <queue>InternationalEscalations</queue>
    </listViews>
    <listViews>
        <fullName>InternationalPlatinumGold</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Platinum/Gold</label>
        <queue>InternationalPlatinumGold</queue>
    </listViews>
    <listViews>
        <fullName>InternationalSilverBronze</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Silver/Bronze</label>
        <queue>InternationalSilverBronze</queue>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>PartnerRelations</fullName>
        <filterScope>Queue</filterScope>
        <label>Partner Relations</label>
        <queue>PartnerRelations</queue>
    </listViews>
    <listViews>
        <fullName>USEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Escalations</label>
        <queue>USEscalations</queue>
    </listViews>
    <listViews>
        <fullName>USPlatinumGold</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Platinum/Gold</label>
        <queue>USPlatinumGold</queue>
    </listViews>
    <listViews>
        <fullName>USSilverBronze</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Silver/Bronze</label>
        <queue>USSilverBronze</queue>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>